# nonlinear_equations

./: CMakeLists.txt  README.md  main.cpp
backups/: polowienie.cpp  regula_falsi.cpp  sieczne.cpp
cmake/Modules/: FindMPFR.cmake
include/: interval.h
math_functions/: cube_3.c  cube_4.c  functions.cpp  square_1.c
